<resources>
    <string name="app_name">WordWar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_score_msg">High Score : %d</string>
    <string name="title_msg">Word War</string>
    <string name="title_button_fight">Fight</string>
    <string name="title_button_practice">Practice</string>
    <string name="title_version">v-1.0.0</string>
    <string name="title_photo">title_photo</string>
    <string name="win_back">Back</string>
    <string name="you_win">YOU WIN!</string>
    <string name="win_score">New Record : %d !</string>
    <string name="win_logo">win</string>
    <string name="lose_logo">lose</string>
    <string name="you_lose">YOU LOSE~</string>
    <string name="lose_back">Back</string>
    <string name="current_score">Current Score : %d</string>
    <string name="new_word">Are You Ready?</string>
    <string name="fight_button_a">A</string>
    <string name="fight_button_b">B</string>
    <string name="fight_button_c">C</string>
    <string name="fight_button_d">D</string>
    <string name="practice_button_back">Back</string>
    <string name="practice_button_web">Web</string>
    <string name="lose_score">Your Score : %d</string>
    <string name="fight_uk_button">uk</string>
    <string name="fight_us_button">us</string>
    <string name="title_button_review">review</string>
</resources>